# rstms-vimfix

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  tox.ini
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  readme.rst  rstms_vimfix.rst
make/: dist.mk  docker.mk  lint.mk  publish.mk  release.mk  test.mk
rstms_vimfix/: __init__.py  cli.py  shell.py  verify.py  version.py  vimfix.py
tests/: __init__.py  test_cli.py
