[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.10"



[project]
name = "rstms-vimfix"
version = "0.1.3"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["rstms", "vim", "quickfix", "rstms-vimfix"]
classifiers = [
  "Intended Audience :: Developers",

  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["description"] 

dependencies = [
  "click"
]

[tool.flit.module]
name = "rstms_vimfix"

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "coverage",
  "devtools",
  "isort",
  "flake8",
  "flake8-length",
  "pdbpp",
  "pytest",
  "python-box",
  "toml",
  "tox"
]
docs = [
  "m2r2",
  "sphinx",
  "sphinx-click",
  "pallets-sphinx-themes"
]

[project.urls]
Home = "https://github.com/rstms/rstms-vimfix"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
vimfix = "rstms_vimfix:cli"
